--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -368,10 +368,6 @@ legend + * {
   clear: left
 }
 
-::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-fields-wrapper, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-text, ::-webkit-datetime-edit-year-field {
-  padding: 0
-}
-
 ::-webkit-inner-spin-button {
   height: auto
 }
@@ -2255,7 +2251,7 @@ textarea.form-control-lg {
   cursor: pointer
 }
 
-.form-control-color::-moz-color-swatch {
+.form-control-color {
   height: 1.5em;
   border-radius: .25rem
 }
@@ -2586,11 +2582,6 @@ textarea.form-control-lg {
   color: transparent
 }
 
-.form-floating > .form-control:not(:-moz-placeholder-shown) {
-  padding-top: 1.625rem;
-  padding-bottom: .625rem
-}
-
 .form-floating > .form-control:not(:-ms-input-placeholder) {
   padding-top: 1.625rem;
   padding-bottom: .625rem
@@ -2611,7 +2602,7 @@ textarea.form-control-lg {
   padding-bottom: .625rem
 }
 
-.form-floating > .form-control:not(:-moz-placeholder-shown) ~ label {
+.form-floating > label {
   opacity: .65;
   transform: scale(.85) translateY(-.5rem) translateX(.15rem)
 }
@@ -4445,7 +4436,6 @@ textarea.form-control-lg {
   float: left;
   padding-right: .5rem;
   color: #6c757d;
-  content: var(--bs-breadcrumb-divider, "/")
 }
 
 .breadcrumb-item.active {
@@ -5179,14 +5169,6 @@ textarea.form-control-lg {
 
 .toast.hide {
   display: none
-}
-
-.toast-container {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  max-width: 100%;
-  pointer-events: none
 }
 
 .toast-container > :not(:last-child) {
