--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -31,7 +31,7 @@
                     <div class="col-md-8" style="display: flex;align-items: center">
                       <label style="margin-left:0">Name:</label>
                       <input class="form-control" type="text" ngModel name="name" maxlength="128"
-                             style="width: 200px; height: 30.8px">
+                             style="width: 200px;">
                       <label>Rating from:</label>
                       <select class="dataTable-selector form-select" ngModel name="fromRating" style="width: auto">
                         <option>0</option>
