--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -31,14 +31,15 @@
                   <div id="filter-forms" class="row-12">
                     <div class="row" style="margin-bottom: 5px">
                       <div class="col-md-10" style="display: flex;align-items: center">
-                        <label style="margin-left:0">Name:</label>
+                        <label class="filter-form-label" style="margin-left: 0;">Name:</label>
                         <input class="form-control" type="text" ngModel name="name"
-                               style="width: 150px; height: 31px">
-                        <label style="margin-left:10px">Authors:</label>
+                               style="width: 150px;">
+                        <label class="filter-form-label">Authors:</label>
                         <input class="form-control" type="text" ngModel name="searchingName"
-                               style="width: 150px; height: 31px">
-                        <label style="margin-left:10px">Rating from:</label>
-                        <select class="dataTable-selector form-select" ngModel name="fromRating" style="width: auto">
+                               style="width: 150px;">
+                        <label class="filter-form-label">Rating from:</label>
+                        <select class="dataTable-selector form-select" ngModel name="fromRating"
+                                style="width: auto; font-size: 1rem">
                           <option>0</option>
                           <option>1</option>
                           <option>2</option>
@@ -46,9 +47,9 @@
                           <option>4</option>
                           <option>5</option>
                         </select>
-                        <label style="margin-left: 5px">to:</label>
+                        <label class="filter-form-label" style="margin-left: 5px">to:</label>
                         <select class="dataTable-selector form-select" ngModel name="toRating"
-                                style="width: auto;">
+                                style="width: auto;font-size: 1rem">
                           <option>1</option>
                           <option>2</option>
                           <option>3</option>
@@ -65,15 +66,15 @@
                     </div>
                     <div class="row" style="margin-top: 5px">
                       <div class="col-md-10" style="display: flex;align-items: center">
-                        <label style="margin-left:0">Publisher:</label>
+                        <label class="filter-form-label" style="margin-left: 0">Publisher:</label>
                         <input class="form-control" type="text" ngModel name="publisher"
-                               style="width: 200px; height: 31px">
-                        <label style="margin-left:10px">Year:</label>
+                               style="width: 200px; ">
+                        <label class="filter-form-label">Year:</label>
                         <input class="form-control" type="number" ngModel name="yearPublisher"
-                               style="width: 100px; height: 31px">
-                        <label style="margin-left:10px">ISBN</label>
+                               style="width: 100px;">
+                        <label class="filter-form-label">ISBN:</label>
                         <input class="form-control" type="text" ngModel name="isbn"
-                               style="width: 175px; height: 31px" mask="000-0-0000-0000-0" minlength="17"
+                               style="width: 175px;" mask="000-0-0000-0000-0" minlength="17"
                                maxlength="17">
                       </div>
                       <div class="col-md-2 text-end">
@@ -158,7 +159,7 @@
                 <td>{{book.rating}}</td>
                 <td>{{book.publisher}}</td>
                 <td>{{book.yearPublisher}}</td>
-                <td>{{book.isbn}}</td>
+                <td>{{formatIsbn(book.isbn.toString())}}</td>
                 <td class="text-end">
                   <div class="btn-group text-end" role="group">
                     <a (click)="onOpenModal('edit', book)" class="mat-icon-button" role="button"
@@ -184,9 +185,9 @@
                 </td>
                 <td>
                   <div style="display: flex; align-items: center;justify-content: center">
-                    <label style="margin-right: 10px">Authors per page</label>
+                    <label style="margin-right: 10px">Books per page</label>
                     <select class="dataTable-selector form-select" ngModel="5" name="pageSize"
-                            (ngModelChange)="changeElementsPerPage($event)" style="width: auto;">
+                            (ngModelChange)="changeElementsPerPage($event)" style="width: auto; font-size: 1rem;">
                       <option value="5" selected>5</option>
                       <option value="10">10</option>
                       <option value="20">20</option>
