changed style for dataTable-selector, filterForm and break-word on authors and books pages

--- a/frontend/src/app/views/author/author.component.css
+++ b/frontend/src/app/views/author/author.component.css
@@ -229,3 +229,9 @@ table {
   height: 31px;
   padding-top: 2px;
 }
+td {
+  vertical-align: middle;
+}
+.mat-checkbox-layout {
+  margin-bottom: 0.25rem;
+}
