--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -181,7 +181,7 @@
         Details
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">X</button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" style="word-break: break-all;">
         <p>First name: {{detailAuthor.firstName}}</p>
         <p>Second name: {{detailAuthor.secondName}}</p>
         <div id="rating-line"><label style="margin-right: 10px">Rating:</label>
