--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -189,6 +189,30 @@
             <div class="star-value" [ngStyle]="{'width': (detailAuthor.rating * 100 / 5)+ '%' } "></div>
           </div>
         </div>
+        <section id="groups">
+          <div class="row match-height">
+            <div class="col-12 mt-3 mb-1">
+              <h4 class="section-title text-uppercase">Top books</h4>
+            </div>
+          </div>
+          <div class="row match-height" *ngFor="let book of topThreeBooks">
+            <div class="col-12">
+              <div class="card-group">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-body">
+                      <h4 class="card-title">{{book.name}}</h4>
+                      <p class="card-text">
+                        This card has supporting text below as a natural lead-in to additional
+                        content.</p>
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">
